# shaoxiangAI

./: .coveragerc  .dockerignore  .env.example  .gitignore  CHANGELOG.md  DESIGN.md  Dockerfile  ONBOARDING.md  README.md  alembic.ini  aore_pipeline.py  auto_pipeline.py  bayesian_commander.py  bet_bot.py  bridge_service.py  cleanup_orphan_if.py  compute_otsm_features.py  data_integrity.py  database.py  docker-compose.yml  draw_d_scorer.py  draw_expert.py  eu_odds_analysis.py  experience_memory.py  footballai_architecture_v4.html  footballai_v6_diagnostic_report.md  handicap_cover_predictor.py  handicap_depth_mapper.py  handicap_labeler.py  handicap_pipeline.py  kelly_score_analysis.py  main.py  market_goal_predictor.py  markov_chain_predictor.py  naive_bayes_intent.py  odds_crack_analysis.py  odds_handicap_converter.py  odds_temporal_sm.py  odds_timeline_collector.py  pipeline.py  (+25 more)
.experts/: EXPERT_SYSTEM.md  README.md
agents/: __init__.py  heuristic_predictor.py  model_bridge.py
alembic/: env.py
api/: __init__.py  chat_api.py  ocr.py
backend/: flask_bridge.py  main.py  queshi.txt  requirements.txt
bookmaker_sim/: __init__.py  adversarial_verifier.py  balance_simulator.py  bayesian_commander.py  bayesian_odds_inverter.py  bookmaker_trap_detector.py  eu_odds_analysis.py  harvesting_guard.py  kelly_score_analysis.py  margin_likelihood_bridge.py  market_derivation.py  odds_crack_analysis.py  odds_handicap_converter.py  odds_temporal_sm.py  pro_predict_kelly.py  risk_barrier_engine.py  score_distribution.py
browser_extension/: background.js  content.js  manifest.json  popup.html  popup.js
config/: README.md  __init__.py  api_budget.yaml  api_config.py  benchmarks.yaml  config.yaml  drawgate_v53_rules.json  expert_registry.yaml  external_data_rules.py  fifa_rankings_2026.json  hardware_config.py  jepa_v5.yaml  lessons.json  pre_tournament_form.json  settings.py  settings.yaml  standings_template.json  team_names.json  terminology.yaml  tournament_rules.json
core/: __init__.py  context.py
data/: ab_test_matches.json  ab_versionA.json  backfill_wc2026.py  build_r16_results.py  deep_tactical_analysis.json  dynamic_team_db.json  dynamic_team_db_module.py  final_group_standings.json  final_group_standings_v2.json  full_backtest_72_matches.json  md3_actual_scores_0625_0628.json  md3_lineup_rotation_data.json  ou_crossref_database.json  ou_historical_model.json  ou_logistic_model.json  ou_screenshot_6_28.json  parquet_syncer.py  qtx_article_index.json  qtx_intel_round32.json  round32_bracket.json  round32_motivation_reports.json  round32_predictions.json  round32_tactical_predictions.json  score_freq_wc2026.json  squad_depth_tiers.json  standings_live.json  team_espn_ids.json  tournament_history.json  user_12_predictions.json  wc2022_complete_with_odds.json  wc2022_vs_2026_analysis.md  wc2026_72matches_with_odds.json  wc2026_bing_official.json  (+4 more)
footballai-core/: pyproject.toml
footballai-core/footballai/: __init__.py
footballai-core/footballai/data/: team_db.py
footballai-core/footballai/rules/: __init__.py
(+937 files in other folders)
