[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shaoxiang-ai"
version = "6.0.0"
description = "ShaoxiangAI — World Cup 2026 football prediction system"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["pipeline", "predictors", "rules", "features", "modules", "data_collector", "backend", "database", "bookmaker_sim", "config", "data", "ml", "optimize", "validation", "training", "core", "knowledge_base", "interfaces", "agents"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
markers = [
    "live_data: 依赖 live odds feed (THEODDS_API_KEY)，无 feed 环境跳过",
]

# ── mypy 类型门禁 (P1-2 升级, 2026-07-14) ──
# 覆盖: pipeline 全量 + 注码 SSoT (scripts.bet_core); scripts/pipeline 均为正式包。
# 分层策略: 核心 SSoT 强制类型注解 (disallow_untyped_defs), 边缘历史债务暂豁免
#           (ignore_errors), 后续逐文件摘帽 (见优化报告路线图 P3)。
[tool.mypy]
python_version = "3.12"
mypy_path = "."
explicit_package_bases = true
ignore_missing_imports = true
warn_unused_ignores = false
warn_redundant_casts = true
warn_unused_configs = true
files = ["pipeline", "scripts/bet_core.py", "data_collector"]

# 边缘历史债务: 暂豁免 (渐进式类型化 — ignore_errors 对 files 直接列出的文件无效,
# 但对包遍历/import 跟随分析的模块生效; 后续逐文件摘帽即从下方豁免移除并补注解,
# 见优化报告路线图 P3)
[[tool.mypy.overrides]]
module = [
    "pipeline.*",
    "bookmaker_sim.*",
    "data.worldcup26_enricher.*",
]
ignore_errors = true

# 核心 SSoT: 强制类型注解 (放最后, 优先级覆盖上方边缘豁免)
# 注码/凯利/价值层/赔率破解 单一事实源, 强制类型注解, 杜绝公式漂移/类型隐患
[[tool.mypy.overrides]]
module = ["scripts.bet_core", "pipeline.deep_report", "pipeline.reverse_odds_engine", "pipeline.score_model"]
disallow_untyped_defs = true
check_untyped_defs = true
ignore_errors = false
